# fqf

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_PROCESS.md  brainstorm.md  fqf2026.py  fqf2026_stages.csv  pyproject.toml  review.md
.github/workflows/: ci.yml  deploy.yml
docs/: DomainMapping.md  TODO-offline-mode.md  login-use-cases.md
docs/superpowers/plans/: 2026-03-27-fqf-schedule-builder.md  2026-03-28-map-view-distance.md  2026-04-01-maybe-selection.md
docs/superpowers/specs/: 2026-03-29-identity-security-design.md  2026-03-30-share-flow-and-fixes.md
scripts/: check_prerequisites.sh  firestore_sync.py  generate_yaml.py  set-gcloud-creds-for-deploy  setup-gcp-project
src/fqf/: __init__.py  db.py  festival_config.py  models.py  slugify.py
src/fqf/api/: act_routes.py  app.py  config_routes.py  helpers.py  rate_limit.py  schedule_routes.py  schemas.py  stage_routes.py
src/fqf/data/: __init__.py  fq2026_acts.yaml
src/fqf/schedule/: __init__.py  friday.py  loader.py  saturday.py  sunday.py  thursday.py
src/fqf/tokens/: fuzzy.py  generator.py  words.py
tests/: conftest.py  test_api_acts.py  test_api_config.py  test_api_schedules.py  test_api_stages.py  test_db.py  test_fuzzy.py  test_models.py  test_rate_limit.py  test_schedule.py  test_slugify.py  test_tokens.py  test_tokens_new.py
ui/: .prettierignore  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vite.config.ts.timestamp-1775667102129-7c943720104e5.mjs
ui/src/: app.css  app.html  service-worker.ts
ui/src/lib/: api.ts  auth-utils.ts  conflict.test.ts  conflict.ts  constants.ts  display.test.ts  display.ts  distance.test.ts  distance.ts  emoji-mapper.test.ts  emoji-mapper.ts  fingerprint.ts  map-utils.test.ts  map-utils.ts  network.ts  picks.test.ts  picks.ts  stores.svelte.ts  stores.test.ts  types.ts
ui/src/lib/components/: ActBlock.svelte  ActDetailModal.svelte  ActRow.svelte  AvatarMenu.svelte  DayTabs.svelte  FilterPanel.svelte  HelpPanel.svelte  IdentityGate.svelte  LoginForm.svelte  MapActLabel.svelte  MapView.svelte  MergeView.svelte  MobileSchedule.svelte  Modal.svelte  MySchedule.svelte  PickButtons.svelte  ScheduleGrid.svelte  ScheduleShell.svelte  (+4 more)
ui/src/routes/: +layout.svelte  +page.svelte
ui/static/: manifest.json
ui/tests/e2e/: browse-acts.spec.ts  fixtures.ts  pick-and-persist.spec.ts  share-flow.spec.ts
(+5 files in other folders)
