[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fqf"
dynamic = ["version"]
description = "French Quarter Festival 2026 Schedule Builder"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.30",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.11",
]

[project.scripts]
fqf = "fqf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fqf = ["static/**/*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
addopts = ["--cov=src/fqf", "--cov-report=html", "--cov-report=term"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
